--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,18 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+     
 }
+.font-iransans {
+  font-family: var(--font-iransans);
+}
+.font-hamid {
+  font-family: var(--font-hamid);
+}
+.font-reza {
+  font-family: var(--font-reza);
+}
+
 
 @theme inline {
   --color-background: var(--background);
@@ -16,11 +27,16 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+
   }
 }
 
-body {
+body,html {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+   scroll-behavior: smooth;
 }
+/* styles/globals.css یا app/globals.css */
+
+
+
